# SitePlan-lite

./: .gitignore  README.md  SitePlan-lite.code-workspace  pyproject.toml
sitelite/: application.py  config.py  database.py  logger.py  tests.py
sitelite/models/: auth_models.py  basic_models.py  data_models.py
sitelite/models/form_model/: __init__.py  forms.py
sitelite/modules/: employee.py  planner.py  platformUser.py  project.py  rate.py  site_db.py  supplier.py  utils.py
sitelite/routes/: __init__.py  appHome.py  app_base_routes.py  data_analysis_routes.py  project_router.py
src/siteplan_lite/: __init__.py
static/: package-lock.json  package.json
static/css/: input.css  site.css
static/js/app/: app.js
templates/: app_interface.html  index.html  user_form.html
templates/baseTemplates/: main_template.html
templates/baseTemplates/ui/: main_nav.html
templates/components/: macros.html
templates/components/employee/: Account.html  Bank.html  Days.html  Employee.html  Home.html  Index.html  Jobs.html  Loans.html  Payments.html  Projects.html  fakeaccount.html
templates/components/project/: Account.html  ActivityLogs.html  Day.html  Days.html  Home.html  Index.html  Job.html  Jobs.html  Location.html  Orders.html  Project.html  Rates.html  Tasks.html  Worker.html  Workers.html  projectPage.html  projectsIndex.html
templates/components/project/account/: Bank.html  Deposit.html  Deposits.html  Expences.html  InvoiceItems.html  Invoices.html  PayBill.html  PayBills.html  PayStatements.html  Paybill.html  PaybillItems.html  Stastics.html  UnpaidTasks.html  Withdrawals.html
templates/components/project/job/: AddTask.html  Bill.html  Home.html  Tasks.html
templates/components/rate/: About.html  Rate.html  Rates.html
templates/components/supplier/: Index.html  Supplier.html
