[project]
name = "siteplan-lite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.46.2",
    "stringgenerator>=0.4.4",
    "jinja2>=3.1.6",
    "pydantic[email]>=2.11.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
